# capston_h3c_integration

./: .gitignore  README.md  clean_before_launch.sh  howto.txt  install_cusparselt.sh  requirements.txt  run_all.sh  to_chan_readme.txt
src/capston_bringup/: CMakeLists.txt  package.xml
src/capston_bringup/launch/: bringup_all.launch.py  realsense_wrapper.launch.py
src/patrol_bridge/: readme.txt  setup.py
src/patrol_bridge/launch/: bringup.launch.py
src/patrol_bridge/patrol_bridge/: cal_errer_node.py  dummy_patrol_server_node.py  patrol_command_bridge.py
src/patrol_vision/: how_To_setting_realsence.txt  package.xml  readme.txt  setup.py
src/patrol_vision/launch/: system.launch.py
src/patrol_vision/patrol_vision/: camera_calib_cli_checher_node copy.py  camera_calib_cli_node.py  camera_calib_cli_node_ac.py  camera_publisher.py  cap_and_send.py  capture_sender.py  patrol_http_bridge.py  webrtc_sender.py
src/patrol_yolo/: make_engine.py  readme.txt  setup.cfg  setup.py
src/patrol_yolo/config/: botsort.yaml  person_tracker.yaml
src/patrol_yolo/launch/: person_tracker.launch.py
src/patrol_yolo/patrol_yolo/: audio_upload_control_node.py  person_detect_control_node.py  person_event_sender_node.py  person_following_node.py  person_tracker_node.py
src/rfid/: dummy_server.py  package.xml  setup.cfg  setup.py
src/rfid/launch/: rfid.launch.py
src/rfid/resource/: rfid
src/rfid/rfid/: secondary_auth_node.py
src/robot_gui/: need.txt  package.xml  setup.py
src/robot_gui/launch/: robot_gui.launch.py
src/robot_gui/maps/: map.yaml
(+8 files in other folders)
